--- a/store-item/store-item.component.css
+++ b/store-item/store-item.component.css
@@ -1,4 +1,4 @@
-.item-container {
+/* .item-container {
     position: relative;
 }
 
@@ -20,4 +20,4 @@ p {
     display: inline-block;
     padding: 5px;
     font-size: 12px;
-}
+} */
