--- a/store-item/store-item.component.html
+++ b/store-item/store-item.component.html
@@ -1,7 +1,7 @@
 <div class="item-container">
     <img src="" alt="" width="200px" height="200px">
     <div class="item-info">
-        <p>Name of item</p>
-        <p>Price of item</p>
+        <p>{{ itemobject['name'] }}</p>
+        <p>${{ itemobject['price']}}</p>
     </div>
 </div>
