--- a/store-menu/store-menu.component.css
+++ b/store-menu/store-menu.component.css
@@ -27,6 +27,11 @@ button {
     font-size: 14px;
     cursor: pointer;
     border-radius: 5px;
+    transition: .4s;
+}
+
+button:hover {
+    border: 2px solid pink;
 }
 
 .search-bar {
@@ -43,7 +48,7 @@ input {
 }
 
 .active {
-    background-color: green;
+    background-color: rgb(140, 216, 196);
     color: white;
-    transition: 1s;
+    transition: .4s;
 }
