--- a/store-shelves/store-shelves.component.html
+++ b/store-shelves/store-shelves.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-    <ng-container>
-        <app-store-item></app-store-item>
-    </ng-container>
+    <div *ngFor="let item of items; let i = index">
+        <app-store-item [itemobject]="item" [item_num]="i"></app-store-item>
+    </div>
 </div>
