--- a/store-item/store-item.component.html
+++ b/store-item/store-item.component.html
@@ -1,5 +1,5 @@
 <div class="item-container">
-    <img src="" alt="" width="200px" height="200px">
+    <img src="{{ itemobject['imageURL'] }}" alt="{{ itemobject['name'] }}" width="200px" height="200px">
     <div class="item-info">
         <p>{{ itemobject['name'] }}</p>
         <p>${{ itemobject['price']}}</p>
