--- a/store-shelves/store-shelves.component.css
+++ b/store-shelves/store-shelves.component.css
@@ -1,5 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .grid-container {
     display: grid;
-    grid-template: auto auto auto;
+    grid-template-columns: auto auto auto;
     grid-template-rows: auto;
+    width: 40%;
+    margin: 0 auto;
 }
