Fixed overflow issue

--- a/store-menu/store-menu.component.html
+++ b/store-menu/store-menu.component.html
@@ -1,10 +1,10 @@
 <h1>My <span>Store</span></h1>
 <div class="menu-buttons">
-    <button id="0" type="button" [ngClass]="class[0] ? 'active' : ''" (click)="onBtnClick($event)">All</button>
-    <button id="1" type="button" [ngClass]="class[1] ? 'active' : ''" (click)="onBtnClick($event)">Cakes</button>
-    <button id="2" type="button" [ngClass]="class[2] ? 'active' : ''" (click)="onBtnClick($event)">Cupcakes</button>
-    <button id="3" type="button" [ngClass]="class[3] ? 'active' : ''" (click)="onBtnClick($event)">Sweets</button>
-    <button id="4" type="button" [ngClass]="class[4] ? 'active' : ''" (click)="onBtnClick($event)">Donuts</button>
+    <button id="0" type="button" [ngClass]="class[0] ? 'active' : ''" (click)="onBtnClick($event)">ALL</button>
+    <button id="1" type="button" [ngClass]="class[1] ? 'active' : ''" (click)="onBtnClick($event)">CAKES</button>
+    <button id="2" type="button" [ngClass]="class[2] ? 'active' : ''" (click)="onBtnClick($event)">CUPCAKES</button>
+    <button id="3" type="button" [ngClass]="class[3] ? 'active' : ''" (click)="onBtnClick($event)">SWEETS</button>
+    <button id="4" type="button" [ngClass]="class[4] ? 'active' : ''" (click)="onBtnClick($event)">DONUTS</button>
 </div>
 <div class="search-bar">
     <img src="https://imageog.flaticon.com/icons/png/512/49/49116.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF" alt="" width="40px" height="20px">
