--- a/store-menu/store-menu.component.css
+++ b/store-menu/store-menu.component.css
@@ -7,6 +7,7 @@
 h1 {
     margin-top: 50px;
     text-align: center;
+    font-size: 48px;
 }
 
 span {
@@ -46,6 +47,7 @@ input {
     font-size: 18px;
     width: 25%;
     padding: 5px;
+    font-family: 'Dancing Script', cursive;
 }
 
 .active {
