--- a/store-menu/store-menu.component.html
+++ b/store-menu/store-menu.component.html
@@ -8,6 +8,6 @@
 </div>
 <div class="search-bar">
     <img src="https://imageog.flaticon.com/icons/png/512/49/49116.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF" alt="" width="40px" height="20px">
-    <input id="search-items" (focus)="onInputFocus()" [placeholder]='current_placeholder' (blur)="onInputBlur()" type="text" name="search-items">
+    <input (keyup.enter)="onKey()" [(ngModel)]="inputText" id="search-items" (focus)="onInputFocus()" [placeholder]='current_placeholder' (blur)="onInputBlur()" type="text" name="search-items">
 </div>
 <hr>
